--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Author</h1>
-<%= form_with scope: :author, local: true do |form| %>
+<%= form_with url: "/authors", scope: :author, local: true do |form| %>
     <p>
       <%= form.label :first_name %><br>
       <%= form.text_field :first_name %>
