--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -10,6 +10,7 @@
             <td><%= link_to author.name, author_path(author) %></td>
             <td><%= link_to author.homepage, author.homepage %></td>
             <td><%= link_to "Edit", edit_author_path(author) %></td>
+            <td><%= link_to 'Delete', author_path(author), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></td>
         </tr>
     <% end %>
 </table>
