--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -2,6 +2,13 @@
 
 <%= render @paper %>
 
+<p>
+    <strong>Authors</strong>
+      <%@paper.authors.each do |author| %>
+        <p><%= author.name %></p>
+      <% end %>
+</p>
+
 <div>
   <%= link_to "Edit this paper", edit_paper_path(@paper) %> |
   <%= link_to "Back to papers", papers_path %>
